--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -17,7 +17,7 @@
   border-radius: 10px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   text-align: center;
-  max-width: 500px;
+  max-width: 900px;
   margin: auto;
   animation: fadeIn 0.8s ease-in-out; /* 🔥 Animación corregida */
 }
@@ -56,5 +56,6 @@ button {
   background-color: #dc3545;
   color: white;
   border: none;
+  border-radius: 25px;
   padding: 10px 15
 }
