--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -19,6 +19,7 @@
   text-align: center;
   max-width: 900px;
   margin: auto;
+  position: relative; /* Necesario para el posicionamiento absoluto del botón */
   animation: fadeIn 0.8s ease-in-out; /* 🔥 Animación corregida */
 }
 
@@ -35,27 +36,73 @@
 }
 
 h2, h3 {
-  font-family: 'Lobster', cursive;
+  font-family: 'Roboto', sans-serif;
   font-size: 24px;
-  color: #007bff;
+  color: #010701;
   animation: fadeInScale 0.6s ease-out;
 }
 
 /* 🌟 Resaltar información importante */
 .highlight {
   font-weight: bold;
-  color: #ff5733;
+  color: #a38c0b;
 }
 
 /* 🌟 Botón de Cerrar Sesión con Animación */
 .dashboard-actions {
-  margin-top: 20px;
+  position: absolute; /* Posicionamiento absoluto */
+  top: 20px; /* Espacio desde la parte superior */
+  right: 20px; /* Espacio desde el lado derecho */
 }
 
+/* Estilo para el botón */
 button {
-  background-color: #dc3545;
+  background-color: #006400;
   color: white;
   border: none;
   border-radius: 25px;
-  padding: 10px 15
+  padding: 10px 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
+
+/* Efecto de hover para el botón */
+button:hover {
+  background-color: #004d00; /* Cambio de color cuando se pasa el mouse por encima */
+}
+
+/* 🌟 Tarjeta del Mapa */
+.dashboard-card {
+  margin-top: 30px;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.route-image {
+  width: 100%;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+
+/* 🌟 Información del Camión */
+.extra-info {
+  margin-top: 30px;
+  background-color: #428142;  /* Color distintivo para la sección */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.extra-info h3 {
+  font-size: 1.5em;
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+
+.extra-info p {
+  font-size: 1.1em;
+  margin: 5px 0;
+}
+
